# secrets

./: Cargo.toml  README.md  secrets.code-workspace
.cargo/: config.toml
cli/: Cargo.toml
cli/src/: main.rs  server.rs
client/: Cargo.toml
client/src/: lib.rs
client/tests/: client.rs
rpc/: Cargo.toml
rpc/src/: client.rs  lib.rs  server.rs  transports.rs
rpc/src/transports/: json.rs
server/: Cargo.toml
server/src/: config.rs  db.rs  lib.rs  routes.rs  service.rs
server/src/db/: orgs.rs  projects.rs  secrets.rs  users.rs
service/: Cargo.toml
service/src/: error.rs  gen.rs  http.rs  lib.rs  traits.rs
service/src/http/: client.rs  codec.rs  server.rs
service/src/http/server/: handlers.rs
src/: client.rs  cmd.rs  lib.rs  main.rs  server.rs  shared.rs
src/client/: api.rs  config.rs
src/cmd/: client.rs  server.rs
src/server/: api.rs  config.rs  routes.rs
