[package]
name = "secrets"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.64"
axum = "0.5.15"
clap = { version = "3.2.20", features = ["derive"] }
colored = "2.0.0"
dialoguer = "0.10.2"
dirs = "4.0.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.21.0"
reqwest = { version = "0.11.11", features = ["json"] }
rusqlite = "0.28.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.0", features = ["full"] }
toml = "0.5.9"
