[package]
name = "cli"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "secrets"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.65"
clap = { version = "3.2.22", features = ["derive"] }
colored = "2.0.0"
dialoguer = "0.10.2"
server = { path = "../server" }
tokio = { version = "1.21.1", features = ["full"] }
