[package]
name = "rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
hyper = { version = "0.14.20", features = ["full"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
