[package]
name = "server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.65"
async-trait = "0.1.57"
dirs = "4.0.0"
serde = { version = "1.0.144", features = ["derive"] }
service = { path = "../service" }
sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-rustls"] }
toml = "0.5.9"

[dev-dependencies]
tokio = { version = "1.21.1", features = ["full"] }
