[package]
name = "service"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["http"]
http = ["dep:axum", "dep:reqwest"]

[dependencies]
async-trait = "0.1.57"
axum = { version = "0.5.16", optional = true }
reqwest = { version = "0.11.12", features = ["json"], optional = true }
serde = { version = "1.0.144", features = ["derive"] }
