[package]
name = "service"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["http"]
http = ["dep:hyper", "dep:serde_json"]

[dependencies]
async-trait = "0.1.57"
hyper = { version = "0.14.20", features = ["full"], optional = true }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = { version = "1.0.85", optional = true }
